# rust_merge

./: Cargo.toml
src/: main.rs  merge.rs
test_data/: data.csv  results.csv  segments.csv
