[package]
name = "rust_dataframe_tests"
version = "0.1.0"
authors = ["thehappycheese <the.nicholas.archer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
polars = {version="0.14.8", features=["lazy"]}